1.18-2.0.2:
- Fixed a problem that haunted mobs killed by arrows wouldn't count against the kill bonus

1.18-2.0.1:
- Port to 1.18.2

1.1.4:
- xxx